--- a/rootdir/etc/init.mt6768.rc
+++ b/rootdir/etc/init.mt6768.rc
@@ -4,6 +4,9 @@ on init
     # Mount kernel modules
     mount none /system/lib/modules /vendor/lib/modules bind
 
+on boot
+    setprop init.svc.console stopped
+
 on charger
     start charger
 
