GS5: Use stop instead of setprop for console
- Using setprop generates a denial https://katb.in/kat633, relabeling the prop and allowing vendor_init to set it doesn't work.

Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>

--- a/rootdir/etc/init.mt6768.rc
+++ b/rootdir/etc/init.mt6768.rc
@@ -5,7 +5,7 @@ on init
     mount none /system/lib/modules /vendor/lib/modules bind
 
 on boot
-    setprop init.svc.console stopped
+    stop console
 
 on charger
     start charger
