GS5: Write light hal on vendor_overlay

--- a/rootdir/etc/init.mt6768.rc
+++ b/rootdir/etc/init.mt6768.rc
@@ -6,3 +6,10 @@ on init
 
 on boot
     stop console
+
+    chmod 0664 /sys/class/leds/lcd-backlight/max_brightness
+    chown system system /sys/class/leds/lcd-backlight/max_brightness
+    chmod 0664 /sys/class/leds/red/led_time
+    chown system system /sys/class/leds/red/led_time
+    chmod 0664 /sys/class/leds/red/max_brightness
+    chown system system /sys/class/leds/red/max_brightness
