--- a/rootdir/etc/init.mt6768.usb.rc
+++ b/rootdir/etc/init.mt6768.usb.rc
@@ -43,6 +43,7 @@ on post-fs
     mount functionfs mtp /dev/usb-ffs/mtp rmode=0770,fmode=0660,uid=1024,gid=1024,no_disconnect=1
     mount functionfs ptp /dev/usb-ffs/ptp rmode=0770,fmode=0660,uid=1024,gid=1024,no_disconnect=1
 
+
 on boot
     setprop sys.usb.configfs 1
     setprop sys.usb.ffs.aio_compat 0
@@ -52,6 +53,8 @@ on boot
     setprop vendor.usb.acm_port1 ""
     setprop vendor.usb.acm_enable 0
     write /sys/class/android_usb/android0/f_mtp/cpu_mask 0xF0
+    chmod 0664 /sys/class/android_usb/android0/iSerial
+    chown root system /sys/class/android_usb/android0/iSerial
 
     chown radio system /sys/class/usb_rawbulk/data/enable
     chmod 0660 /sys/class/usb_rawbulk/data/enable
@@ -71,13 +74,6 @@ on boot
     chmod 0660 /dev/ttyGS2
     chown system radio /dev/ttyGS3
     chmod 0660 /dev/ttyGS3
-
-    # for UAC MAX dpidle time
-    write /sys/module/xhci_hcd/parameters/dpidle_fs_max 0
-    write /sys/module/xhci_hcd/parameters/dpidle_hs_max 0
-
-    # for usb otg sdcard hot plug detection
-    write /sys/module/block/parameters/events_dfl_poll_msecs 1000
 
 on charger
     mkdir /config/usb_gadget/g1 0770 shell shell
@@ -107,7 +103,7 @@ on property:sys.usb.config=none && property:sys.usb.configfs=1
     write /config/usb_gadget/g1/idVendor ${vendor.usb.vid}
     rm /config/usb_gadget/g1/configs/b.1/f4
     rm /config/usb_gadget/g1/configs/b.1/f5
-    write /sys/class/udc/musb-hdrc/device/saving 0
+    write /sys/devices/platform/mt_usb/saving 0
 
 ### HID for KPOC ###
 on property:sys.usb.config=hid && property:sys.usb.configfs=1
@@ -138,7 +134,7 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=adb && \
 property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "adb_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/mass_storage.usb0 /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f3
@@ -171,7 +167,7 @@ property:sys.usb.configfs=1 && property:vendor.usb.ffs.mtp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "mtp_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
     write /config/usb_gadget/g1/os_desc/use 1
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/ffs.mtp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port1} /config/usb_gadget/g1/configs/b.1/f3
@@ -200,11 +196,12 @@ property:sys.usb.configfs=1
     setprop vendor.usb.pid 0x2026
 
 on property:sys.usb.ffs.ready=1 && property:sys.usb.config=mtp,adb && \
-property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1 && property:vendor.usb.ffs.mtp.ready=1
+property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1 && \
+property:vendor.usb.ffs.mtp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "mtp_adb_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
     write /config/usb_gadget/g1/os_desc/use 1
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/ffs.mtp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f3
@@ -213,7 +210,8 @@ property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1 && property:vend
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.ffs.ready=1 && property:sys.usb.config=mtp,adb && \
-property:vendor.usb.acm_enable=0 && property:sys.usb.configfs=1 && property:vendor.usb.ffs.mtp.ready=1
+property:vendor.usb.acm_enable=0 && property:sys.usb.configfs=1 && \
+property:vendor.usb.ffs.mtp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "mtp_adb"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
     write /config/usb_gadget/g1/os_desc/use 1
@@ -238,7 +236,7 @@ on property:sys.usb.config=ptp && property:vendor.usb.acm_enable=1 && \
 property:sys.usb.configfs=1 && property:vendor.usb.ffs.ptp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ptp_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/ffs.ptp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port1} /config/usb_gadget/g1/configs/b.1/f3
@@ -266,10 +264,11 @@ property:sys.usb.configfs=1
     setprop vendor.usb.pid 0x2027
 
 on property:sys.usb.ffs.ready=1 && property:sys.usb.config=ptp,adb && \
-property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1 && property:vendor.usb.ffs.ptp.ready=1
+property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1 && \
+property:vendor.usb.ffs.ptp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ptp_adb_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/ffs.ptp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f3
@@ -278,7 +277,8 @@ property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1 && property:vend
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.ffs.ready=1 && property:sys.usb.config=ptp,adb && \
-property:vendor.usb.acm_enable=0 && property:sys.usb.configfs=1 && property:vendor.usb.ffs.ptp.ready=1
+property:vendor.usb.acm_enable=0 && property:sys.usb.configfs=1 && \
+property:vendor.usb.ffs.ptp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ptp_adb"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
     symlink /config/usb_gadget/g1/functions/ffs.ptp /config/usb_gadget/g1/configs/b.1/f1
@@ -303,7 +303,7 @@ property:sys.usb.configfs=1
     mkdir /config/usb_gadget/g1/functions/rndis.gs4
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ums_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/rndis.gs4 /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port1} /config/usb_gadget/g1/configs/b.1/f3
@@ -335,7 +335,7 @@ property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1
     mkdir /config/usb_gadget/g1/functions/rndis.gs4
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "rndis_adb_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/rndis.gs4 /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f3
@@ -400,7 +400,7 @@ on property:sys.usb.config=via_bypass && property:vendor.usb.acm_enable=1 && \
 property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "via_bypass"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/via_modem.gs0 /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/via_ets.gs0 /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/via_atc.gs0 /config/usb_gadget/g1/configs/b.1/f3
@@ -413,7 +413,7 @@ on property:sys.usb.config=via_bypass && property:vendor.usb.acm_enable=0 && \
 property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "via_bypass"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/via_modem.gs0 /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/via_ets.gs0 /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/via_atc.gs0 /config/usb_gadget/g1/configs/b.1/f3
@@ -440,7 +440,7 @@ property:vendor.usb.acm_enable=1 && property:vendor.usb.acm_cnt=1 && \
 property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "rndis_adb_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/via_modem.gs0 /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/via_ets.gs0 /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/via_atc.gs0 /config/usb_gadget/g1/configs/b.1/f3
@@ -455,7 +455,7 @@ property:vendor.usb.acm_enable=1 && property:vendor.usb.acm_cnt=2 && \
 property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "rndis_adb_acm2"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/via_modem.gs0 /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f3
@@ -468,7 +468,7 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=via_bypass,adb && \
 property:vendor.usb.acm_enable=0 && property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "rndis_adb"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/via_modem.gs0 /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/via_ets.gs0 /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/via_atc.gs0 /config/usb_gadget/g1/configs/b.1/f3
@@ -492,7 +492,7 @@ on property:sys.usb.config=mass_storage && property:vendor.usb.acm_enable=1 && \
 property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ums_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/mass_storage.usb0 /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port1} /config/usb_gadget/g1/configs/b.1/f3
@@ -525,7 +525,7 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=mass_storage,adb && \
 property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ums_adb_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     symlink /config/usb_gadget/g1/functions/mass_storage.usb0 /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f3
@@ -558,7 +558,7 @@ on property:sys.usb.config=bicr && property:vendor.usb.acm_enable=1 && \
 property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ums_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     write /config/usb_gadget/g1/functions/mass_storage.usb0/lun.0/cdrom 1
     write /config/usb_gadget/g1/functions/mass_storage.usb0/lun.0/file "/dev/block/loop0"
     symlink /config/usb_gadget/g1/functions/mass_storage.usb0 /config/usb_gadget/g1/configs/b.1/f1
@@ -595,7 +595,7 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=bicr,adb && \
 property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ums_adb_acm"
     write /config/usb_gadget/g1/idProduct ${vendor.usb.pid}
-    write /sys/class/udc/musb-hdrc/device/saving 1
+    write /sys/devices/platform/mt_usb/saving 1
     write /config/usb_gadget/g1/functions/mass_storage.usb0/lun.0/cdrom 1
     write /config/usb_gadget/g1/functions/mass_storage.usb0/lun.0/file "/dev/block/loop0"
     symlink /config/usb_gadget/g1/functions/mass_storage.usb0 /config/usb_gadget/g1/configs/b.1/f1
@@ -693,6 +693,8 @@ on property:sys.usb.config=acm_gs0gs1
     setprop sys.usb.config ${sys.usb.state}
     setprop vendor.usb.acm_idx "1,2"
 
+on property:persist.vendor.radio.port_index=1,4 && property:sys.boot_completed=1
+    setprop sys.usb.config acm_gs0gs3
 on property:sys.usb.config=gs3,dual_acm
     setprop sys.usb.config acm_gs0gs3
 on property:sys.usb.config=mtp,gs3,dual_acm
@@ -732,7 +734,7 @@ on property:sys.usb.config=acm_gs1gs3
     setprop vendor.usb.acm_idx "2,4"
 
 # For ATM (Android Test Mode)
-on property:vendor.usb.clear=1 && property:sys.usb.configfs=1 && property:sys.usb.ffs.ready=0
+on property:vendor.usb.clear=1 && property:sys.usb.configfs=1
     write /config/usb_gadget/g1/UDC "none"
     write /config/usb_gadget/g1/bDeviceClass 0
     write /config/usb_gadget/g1/bDeviceSubClass 0
@@ -743,7 +745,7 @@ on property:vendor.usb.clear=1 && property:sys.usb.configfs=1 && property:sys.us
     rm /config/usb_gadget/g1/configs/b.1/f4
     rm /config/usb_gadget/g1/configs/b.1/f5
     rmdir /config/usb_gadget/g1/functions/rndis.gs4
-    write /sys/class/udc/musb-hdrc/device/saving 0
+    write /sys/devices/platform/mt_usb/saving 0
     setprop vendor.usb.clear 2
 
 # has permission issue when read from ${sys.usb.ffs.ready}
@@ -775,8 +777,8 @@ property:vendor.usb.clear=2 && property:sys.usb.configfs=1
     symlink /config/usb_gadget/g1/functions/acm.gs0 /config/usb_gadget/g1/configs/b.1/f3
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
     #setprop sys.usb.state ${sys.usb.config}
-    #setprop vendor.usb.pid 0x200A
-    setprop vendor.usb.clear 0
+    setprop vendor.usb.pid 0x200A
+    #setprop vendor.usb.clear 0
     setprop vendor.usb.acm_idx "1"
 
 on property:sys.usb.config=atm_gs0gs3 && property:sys.usb.configfs=1
@@ -802,8 +804,8 @@ property:vendor.usb.clear=2 && property:sys.usb.configfs=1
     symlink /config/usb_gadget/g1/functions/acm.gs3 /config/usb_gadget/g1/configs/b.1/f4
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
     #setprop sys.usb.state ${sys.usb.config}
-    #setprop vendor.usb.pid 0x2026
-    setprop vendor.usb.clear 0
+    setprop vendor.usb.pid 0x2026
+    #setprop vendor.usb.clear 0
     setprop vendor.usb.acm_idx "1,4"
 
 ### CHARGING ###
@@ -841,22 +843,19 @@ on property:vendor.usb.bicr=no
     write /sys/class/android_usb/android0/f_mass_storage/lun/file "off"
 
 on property:vendor.usb.port.mode=usb
-	write /sys/class/udc/musb-hdrc/device/portmode 0
+	write /sys/devices/platform/mt_usb/portmode 0
 on property:vendor.usb.port.mode=uart
-	write /sys/class/udc/musb-hdrc/device/portmode 1
+	write /sys/devices/platform/mt_usb/portmode 1
 
-on property:vendor.em.usb.set=USB_DRIVING_CAPABILITY
-	write /proc/mtk_usb/usb20_phy/USB_DRIVING_CAPABILITY ${mediatek.em.usb.value}
-on property:vendor.em.usb.set=RG_USB20_TERM_VREF_SEL
-	write /proc/mtk_usb/usb20_phy/RG_USB20_TERM_VREF_SEL ${mediatek.em.usb.value}
-on property:vendor.em.usb.set=RG_USB20_HSTX_SRCTRL
-	write /proc/mtk_usb/usb20_phy/RG_USB20_HSTX_SRCTRL ${mediatek.em.usb.value}
-on property:vendor.em.usb.set=RG_USB20_VRT_VREF_SEL
-	write /proc/mtk_usb/usb20_phy/RG_USB20_VRT_VREF_SEL ${mediatek.em.usb.value}
-on property:vendor.em.usb.set=RG_USB20_INTR_EN
-	write /proc/mtk_usb/usb20_phy/RG_USB20_INTR_EN ${mediatek.em.usb.value}
-on property:vendor.em.usb.set=RG_USB20_PHY_REV6
-	write /proc/mtk_usb/usb20_phy/RG_USB20_PHY_REV6 ${mediatek.em.usb.value}
+on property:vendor.em.usb.set=term_sel
+    write /proc/mtk_usb/usb-phy0/u2_phy/term_sel ${vendor.em.usb.value}
+on property:vendor.em.usb.set=vrt_sel
+    write /proc/mtk_usb/usb-phy0/u2_phy/vrt_sel ${vendor.em.usb.value}
+on property:vendor.em.usb.set=phy_rev6
+    write /proc/mtk_usb/usb-phy0/u2_phy/phy_rev6 ${vendor.em.usb.value}
+on property:vendor.em.usb.set=discth
+    write /proc/mtk_usb/usb-phy0/u2_phy/discth ${vendor.em.usb.value}
+
 
 on property:vendor.em.usb.bypass.enable=0
 	write /sys/class/usb_rawbulk/gps/enable 1
@@ -895,38 +894,6 @@ on property:vendor.usb.printk=*
 
 on property:persist.vendor.usb.printk=*
 	setprop vendor.usb.printk ${persist.vendor.usb.printk}
-
-on property:vendor.usb.speed.mode=u3
-	write /proc/mtk_usb/speed 1
-	write /sys/class/udc/musb-hdrc/device/cmode 0
-	write /sys/class/udc/musb-hdrc/device/cmode 1
-
-on property:vendor.usb.speed.mode=u2
-	write /proc/mtk_usb/speed 0
-	write /sys/class/udc/musb-hdrc/device/cmode 0
-	write /sys/class/udc/musb-hdrc/device/cmode 1
-
-on property:persist.vendor.usb.speed.mode=u3
-	write /proc/mtk_usb/speed 1
-	write /sys/class/udc/musb-hdrc/device/cmode 0
-	write /sys/class/udc/musb-hdrc/device/cmode 1
-
-on property:persist.vendor.usb.speed.mode=u2
-	write /proc/mtk_usb/speed 0
-	write /sys/class/udc/musb-hdrc/device/cmode 0
-	write /sys/class/udc/musb-hdrc/device/cmode 1
-
-on property:vendor.usb.sib_enable=1
-	write /sys/class/udc/musb-hdrc/device/sib_enable 1
-
-on property:vendor.usb.sib_enable=0
-	write /sys/class/udc/musb-hdrc/device/sib_enable 0
-
-on property:persist.vendor.usb.dbg.lv=*
-	setprop vendor.usb.dbg.lv ${persist.vendor.usb.dbg.lv}
-
-on property:vendor.usb.dbg.lv=*
-	write /sys/module/musb_hdrc/parameters/debug_level ${vendor.usb.dbg.lv}
 
 on property:vendor.usb.testmode=0
 	write /proc/mtk_usb/testmode "0"
