--- a/rootdir/etc/init.sensor_1_0.rc
+++ b/rootdir/etc/init.sensor_1_0.rc
@@ -1,19 +1,16 @@
-#Add for record engineermode test result
-on boot
-    chmod 664 /proc/oplusCustom/Sensor
-    chown system root /proc/oplusCustom/Sensor
-
 # MTK platform .rc configure
 on post-fs-data
     # calibration
     mkdir /data/vendor/sensor 0774 system system
     # Sensor
-    chmod 0660 /dev/hwmsensor
-    chmod 0660 /dev/msensor
-    chmod 0660 /dev/gsensor
-    chmod 0660 /dev/als_ps
-    chmod 0660 /dev/gyroscope
-    chmod 0660 /dev/aal_als
+#prize add by lipengpeng 20211014 start 
+    chmod 0666 /dev/hwmsensor
+    chmod 0666 /dev/msensor
+    chmod 0666 /dev/gsensor
+    chmod 0666 /dev/als_ps
+    chmod 0666 /dev/gyroscope
+    chmod 0666 /dev/aal_als
+#prize add by lipengpeng 20211014 end 
     chmod 0660 /dev/humidity
     chmod 0660 /dev/barometer
     chmod 0660 /dev/m_als_misc
@@ -28,20 +25,15 @@ on post-fs-data
     chmod 0660 /dev/m_situ_misc
     chmod 0660 /dev/m_step_c_misc
     chmod 0660 /dev/m_fusion_misc
-    chmod 0660 /dev/m_virtual_sensor_misc
     chmod 0660 /dev/m_bio_misc
     chmod 0660 /dev/biometric
     chmod 0660 /dev/sensorlist
-    chmod 0660 /dev/input/event4
-    chmod 0660 /dev/input/event5
-    chmod 0660 /dev/sar
 
     chown system system /dev/hwmsensor
     chown system system /dev/msensor
     chown radio system /dev/gsensor
     chown radio system /dev/als_ps
     chown radio system /dev/gyroscope
-    chown radio system /dev/sar
     chown system system /dev/aal_als
     chown system system /dev/humidity
     chown system system /dev/barometer
@@ -57,12 +49,9 @@ on post-fs-data
     chown system system /dev/m_situ_misc
     chown system system /dev/m_step_c_misc
     chown system system /dev/m_fusion_misc
-    chown system system /dev/m_virtual_sensor_misc
     chown system system /dev/m_bio_misc
     chown system system /dev/biometric
     chown system system /dev/sensorlist
-    chown system system /dev/input/event4
-    chown system system /dev/input/event5
 
     chmod 0660 /sys/class/sensor/m_acc_misc/accenablenodata
     chmod 0660 /sys/class/sensor/m_acc_misc/accactive
@@ -123,14 +112,6 @@ on post-fs-data
     chown system system /sys/class/sensor/m_ps_misc/psbatch
     chown system system /sys/class/sensor/m_ps_misc/psflush
     chown system system /sys/class/sensor/m_ps_misc/pscali
-    chmod 0660 /sys/class/oplus_sensor/m_virtual_sensor_misc/virtual_sensoractive
-    chmod 0660 /sys/class/oplus_sensor/m_virtual_sensor_misc/virtual_sensordelay
-    chmod 0660 /sys/class/oplus_sensor/m_virtual_sensor_misc/virtual_sensorbatch
-    chmod 0660 /sys/class/oplus_sensor/m_virtual_sensor_misc/virtual_sensorflush
-    chown system system /sys/class/oplus_sensor/m_virtual_sensor_misc/virtual_sensoractive
-    chown system system /sys/class/oplus_sensor/m_virtual_sensor_misc/virtual_sensordelay
-    chown system system /sys/class/oplus_sensor/m_virtual_sensor_misc/virtual_sensorbatch
-    chown system system /sys/class/oplus_sensor/m_virtual_sensor_misc/virtual_sensorflush
 
     chmod 0660 /sys/class/sensor/m_baro_misc/baroenablenodata
     chmod 0660 /sys/class/sensor/m_baro_misc/baroactive
