--- a/rootdir/etc/ueventd.mtk.rc
+++ b/rootdir/etc/ueventd.mtk.rc
@@ -1,58 +1,32 @@
-#Runsheng.Pei@ANDROID.STORAGE.3612, 2017/12/29, Add for new reserve partition
-#yanghao@PSW.KERNEL.Stability. change the owner from system to root for Android P kernel can >
-/dev/block/bootdevice/by-name/oplusreserve1               0660   root     system
-/dev/block/sdf6   0660   root     system
-
-#Fuchun.Liao@BSP.CHG.Basic 2020/08/07 add for opporeserve3 access
-/dev/block/by-name/oplusreserve3               0660   root     system
-/dev/block/sdc6           0660   root     system
-
-#Runsheng.Pei@ANDROID.STORAGE.3612, 2018/10/17, Add for new reserve partition
-/dev/block/platform/bootdevice/by-name/reserve1               0660   system     system
-/dev/block/sdc4   0660   system     system
-/dev/block/by-name/oplusreserve1               0660   system     system
-#Xuefeng.Peng@ANDROID.STORAGE.3612, 2018/10/17, Add for new reserve partition
-/dev/block/mmcblk0p4 0660 system system
-/dev/block/mmcblk0p7 0660 root system
-
-#Jinke.zhou modify for engineermode to access by-name/reserve_exp1
-/dev/block/platform/bootdevice/by-name/reserve_exp1              0660   system     radio
-
-#Canjie.Zheng add for critical log
-/dev/block/platform/bootdevice/by-name/reserve2               0660   system     system
-
 #change partition permission
-# eMMC only
-/dev/block/mmcblk0                               0660    root    system
-/dev/block/mmcblk0boot0                          0660    root    system
-/dev/block/mmcblk0boot1                          0660    root    system
-/dev/misc-sd                                     0660    root    system
+/dev/block/mmcblk0                                              0660    root    system
+/dev/block/mmcblk0boot0                                         0660    root    system
+/dev/block/mmcblk0boot1                                         0660    root    system
+/dev/misc-sd                                                    0660    root    system
+/dev/block/by-name/misc2     0660    root    system
+/dev/block/by-name/boot      0640    root    system
+/dev/block/by-name/recovery  0640    root    system
+/dev/block/by-name/secro     0640    root    system
+/dev/block/by-name/seccfg    0660    root    system
+/dev/block/by-name/proinfo   0660    root    system
+/dev/block/by-name/nvram     0660    root    system
+/dev/block/by-name/para      0660    root    system
+/dev/block/by-name/logo      0660    root    system
+/dev/block/by-name/frp       0660    root    system
+/dev/block/by-name/md1img    0640    root    system
+/dev/block/by-name/md1img_1  0640    root    system
+/dev/block/by-name/md1img_a  0640    root    system
+/dev/block/by-name/md1img_b  0640    root    system
+/dev/block/by-name/md1dsp    0660    root    system
+/dev/block/by-name/boot_para 0640    root    system
 
-# UFS only
-/dev/block/sda                                   0660    root    system
-/dev/block/sdb                                   0660    root    system
-/dev/block/sdc                                   0660    root    system
-
-# eMMC/UFS common
-/dev/block/platform/bootdevice/by-name/misc2     0660    root    system
-/dev/block/platform/bootdevice/by-name/boot      0640    root    system
-/dev/block/platform/bootdevice/by-name/recovery  0640    root    system
-/dev/block/platform/bootdevice/by-name/secro     0640    root    system
-/dev/block/platform/bootdevice/by-name/seccfg    0660    root    system
-/dev/block/platform/bootdevice/by-name/proinfo   0660    root    system
-/dev/block/platform/bootdevice/by-name/nvram     0660    root    system
-/dev/block/platform/bootdevice/by-name/para      0660    root    system
-/dev/block/platform/bootdevice/by-name/logo      0660    root    system
-/dev/block/platform/bootdevice/by-name/frp       0660    root    system
-/dev/block/platform/bootdevice/by-name/md1img    0640    root    system
-/dev/block/platform/bootdevice/by-name/md1img_a  0640    root    system
-/dev/block/platform/bootdevice/by-name/md1img_b  0640    root    system
-/dev/block/platform/bootdevice/by-name/md1dsp    0660    root    system
-/dev/block/platform/bootdevice/by-name/boot_para 0640    root    system
+# -------------------prize add focal fingerprint by liaoxingen 20200924 begin -------------------
+/dev/focaltech_fp         0666   system     system
+# -------------------prize add focal fingerprint by liaoxingen 20200924 end -------------------
 
 # OTP
 /dev/otp                  0660   system     system
-/dev/block/platform/bootdevice/by-name/otp       0660    root    system
+/dev/block/by-name/otp       0660    root    system
 
 # Connectivity
 /dev/stpwmt               0660   system     system
@@ -67,7 +41,6 @@
 /dev/stpgps               0660   gps        gps
 /dev/gps                  0660   gps        system
 /dev/fw_log_gps           0660   gps        gps
-/dev/gps_emi              0660   gps        gps
 
 # ANT
 /dev/stpant               0660   system     system
@@ -171,6 +144,5 @@
 #MTK In-House TEE
 /dev/ttyACM0              0660   radio      radio
 
-subsystem adf
-    devname uevent_devname
-
+# Resume-on-Reboot
+/dev/access-kregistry     0660   system     system
