GS5: Fix lights service name for charging mode

--- a/rootdir/etc/init.mt6768.rc
+++ b/rootdir/etc/init.mt6768.rc
@@ -102,7 +102,7 @@ on charger
     chown system system /sys/class/leds/red/brightness
     chown system system /sys/class/leds/green/brightness
 
-    start vendor.light-default
+    start vendor.light
 
     # Stop bootprof
     write /proc/bootprof "0"
